--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -54,7 +54,6 @@
             width: 15px;
             height: 15px;
             filter: var(--icon-default-color);
-            transition: filter 0.25s;
         }
         transition: color 0.25s;
     }
